--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -7,6 +7,11 @@
 \usepackage{titling}
 \usepackage[protrusion=true,expansion=true]{microtype}
 
+%Chapter Styling%
+\usepackage{titlesec}
+\titleformat{\chapter}
+{\normalfont\Large\bfseries}{\thechapter.}{18pt}{\Large}
+
 %Fancy Page Styling%
 \usepackage{fancyhdr}
 \pagestyle{fancy}
@@ -15,8 +20,9 @@
 \fancyhead[RE,LO]{Chapter \thechapter}
 \fancyhead[C]{}
 \fancyfoot{}
-\fancyfoot[LE,RO]{Page \thepage}
-\fancyfoot[C]{Benjamin Bui}
+\fancyfoot[LE,RO]{}
+\fancyfoot[C]{\thepage}
+\setlength{\headheight}{15pt}
 
 %Reference Management%
 \usepackage[
@@ -46,34 +52,40 @@ articletitle
 
 %Lorem Ipsum%
 \usepackage{lipsum}
+
 \begin{document}
+
+%Title Page%
 \begin{titlepage}
 	\begin{center}
 		\vspace*{1.5 cm}
 		\textbf{\{Working Title\}}
-		
+
 
 		\vspace{1.5 cm}
-		
+
 		by\\ Benjamin Bui
 		\vspace{1.5 cm}
-		
+
 		Professor Peacock-Lopez, Advisor
 		\vspace{1.5 cm}
-		
+
 		A thesis submitted in partial fulfillment\\
 		of the requirements for the\\
 		Degree of Bachelor of Arts with Honors\\
 		in Chemistry
 		\vspace{1.5 cm}
-		
+
 		Williams College\\
 		Williamstown, Massachusetts
 		\vspace{1.5 cm}
-		
+
 		\today
 	\end{center}
 \end{titlepage}
+
+%Abstract%
+\setcounter{page}{1}
 \thispagestyle{plain}
 \begin{center}
 	\vspace*{\fill}
@@ -82,8 +94,9 @@ articletitle
 	\vspace*{\fill}
 \end{center}
 
-\chapter*{Introduction}
+\tableofcontents
+\chapter{Introduction}
 \input{chapters/introduction}
-\chapter*{Conclusion}
+\chapter{Conclusion}
 \input{chapters/conclusion}
 \end{document}
