--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -189,4 +189,20 @@ articletitle
 		\end{column}
 	\end{columns}
 \end{frame}
+
+\begin{frame}{Switching Oscillations}
+	\begin{columns}
+		\begin{column}{0.5\textwidth}
+			\begin{itemize}
+				\item
+					One way to alter the logistic map
+				\item
+					Used to test effects
+			\end{itemize}
+		\end{column}
+		\begin{column}{0.5\textwidth}
+			Include figure of convergence.
+		\end{column}
+	\end{columns}
+\end{frame}
 \end{document}
