--- a/presentation/references.bib
+++ b/presentation/references.bib
@@ -1,3 +1,32 @@
+@article{Maier2010,
+abstract = {In ecological modeling, seasonality can be represented as a switching between different environmental conditions. This switching strategy can be related to the so-called Parrondian games, where the alternation of two losing games yield a winning game. Hence we can consider two dynamics that, by themselves, yield undesirable behaviors, but when alternated yield a desirable oscillatory behavior. In this case, we also consider a noisy switching strategy and find that the desirable oscillatory behavior prevails. {\textcopyright} 2009 Elsevier B.V. All rights reserved.},
+author = {Maier, M. P S and Peacock-L{\'{o}}pez, Enrique},
+doi = {10.1016/j.physleta.2009.12.039},
+file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Maier, Peacock-L{\'{o}}pez - 2010 - Switching induced oscillations in the logistic map.pdf:pdf},
+issn = {03759601},
+journal = {Physics Letters, Section A: General, Atomic and Solid State Physics},
+title = {{Switching induced oscillations in the logistic map}},
+year = {2010}
+}
+@article{Beutel2007,
+abstract = {In most modern physical chemistry textbooks, chemical oscillations are introduced by analyzing Lotka's 1910 ecological model, which does not show any of the observed properties of chemical oscillations; therefore, chemically relevant two-variable models that show oscillations are valuable for instructors interested in teaching nonlinear chemical kinetics. We choose five models that are closer to experimental systems, and, using dimensionless equations, we study analytically and numerically their transitions from stable steady states to oscillatory states.},
+author = {Beutel, Kathleen M and Peacock-L{\'{o}}pez, Enrique},
+doi = {10.1333/s00897072033a},
+file = {:home/bzk/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Beutel, Peacock-L{\'{o}}pez - 2007 - Chemical Oscillations Two-Variable Chemical Models.pdf:pdf},
+pages = {224--235},
+title = {{Chemical Oscillations: Two-Variable Chemical Models}},
+volume = {12},
+year = {2007}
+}
+@article{Press1939,
+author = {Press, The M I T and Review, The},
+journal = {The Review of Economics and Statistics},
+number = {2},
+pages = {75--78},
+title = {{Interactions between the Multiplier Analysis and the Principle of Acceleration}},
+volume = {21},
+year = {1939}
+}
 @article{Skousen1997,
 abstract = {A reflection of the economics profession through Paul Samuelson's Economics. Samuelson offers an uneasy mix of laissez faire in micro and government interventionism in macro. In earlier editions, Keynesian thinking dominated, with an antisaving, progovernment bias and a need for an activist fiscal policy aimed at alleviating unpredictable chronic business cycles under private enterprise. Middle editions had chapters on the Soviet Union and China, rather than Japan and West Germany. Recently, Samuelson and coauthor William Nordhaus have gradually shifted from antithrift to prosavings policies, from deficit spending to fiscal restraint, and from fiscal policy to monetary policy as effective countercyclical tools.},
 author = {Skousen, Mark},
