--- a/research/samuelson-hick/samuelson-hick.tex
+++ b/research/samuelson-hick/samuelson-hick.tex
@@ -49,7 +49,7 @@ articletitle
 
 \begin{document}
 	\section*{Background}
-  Following the work of John Maynard Keynes, there was a significant amount of work done to incorporate his theories iused by businesses to nto a formalized economic theory. In 1939, Paul Samuelson developed a model that, depending on the parameters chosen, displayed cyclic change reminiscent of a business cycle\autocite{Puu2003,Skousen1997}.
+  Following the work of John Maynard Keynes, there was a significant amount of work done to incorporate his theories into a formalized economic theory. In 1939, Paul Samuelson developed a model that, depending on the parameters chosen, displayed cyclic change reminiscent of a business cycle\autocite{Puu2003,Skousen1997}.
 
 	There are several assumptions this model makes that do not necessarily apply to an actual economy. The model only includes investments and consumption so the economy is closed to other economies, i.e. there are no imports or exports. Moreover, there are no exogenous expenditures such as government spending or other forms of spending independent of business cycles. This model also assumes that investments are exactly equal to the amount of money not consumed, that there is no truly non-productive saving of income.
 
@@ -136,5 +136,5 @@ articletitle
 
 		A system is often considered chaotic if, for a given parameter, the Lyapunov exponent is in the positive domain. When the Lyapunov exponent is in the negative domain, this indicates some form of stability whether it be through a fixed point or some sort of fixed period orbit.
 
-		
+
 \end{document}
