--- a/presentation/no_animation/no_animation.tex
+++ b/presentation/no_animation/no_animation.tex
@@ -177,7 +177,7 @@ style=chem-acs
 
 				\item
 					\begin{equation*}
-						Z_{t-1}\equiv Y_-t-Y_{t-1}
+						Z_{t-1}\equiv Y_{t}-Y_{t-1}
 					\end{equation*}
 
 				\item
@@ -218,7 +218,7 @@ style=chem-acs
 \section{Quantitative Analysis}
 \begin{frame}{Fixed Point Stability}
 	\begin{itemize}
-		\item 
+		\item
 			\textbf{Fixed Points}\hspace{5cm} \textbf{Stability}
 		\item
 			\begin{equation*}
@@ -334,7 +334,7 @@ style=chem-acs
 		\begin{column}{0.5\textwidth}
 			\begin{figure}
 				\centering
-				\includegraphics[height=0.9\textheight]{exploding.pdf}
+				\includegraphics[width=\textwidth]{exploding.pdf}
 			\end{figure}
 		\end{column}
 	\end{columns}
