--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -177,7 +177,7 @@ style=chem-acs
 				\pause
 				\item
 					\begin{equation*}
-						Z_{t-1}\equiv Y_-t-Y_{t-1}
+						Z_{t-1}\equiv Y_t-Y_{t-1}
 					\end{equation*}
 				\pause
 				\item
