Created python based cobweb plot and continued writing in introduction

--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -36,7 +36,7 @@ articletitle
 %Image Formatting%
 \usepackage{graphicx}%Enchanced graphics support%
 \usepackage{float}%Float options$
-\graphicspath{{.}}
+\graphicspath{{./figures/}}
 
 %Math Formatting%
 \usepackage{amsmath}%AMS Math%
