--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,3 +1,96 @@
+@article{May1976,
+abstract = {First-order difference equations arise in many contexts in the biological, economic and social sciences. Such equations, even though simple and deterministic, can exhibit a surprising array of dynamical behaviour, from stable points, to a bifurcating hierarchy of stable cycles, to apparently random fluctuations. There are consequently many fascinating problems, some concerned with delicate mathematical aspects of the fine structure of the trajectories, and some concerned with the practical implications and applications. This is an interpretive review of them.},
+archivePrefix = {arXiv},
+arxivId = {arXiv:1011.1669v3},
+author = {May, Robert M.},
+doi = {10.1038/261459a0},
+eprint = {arXiv:1011.1669v3},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/May - 1976 - Simple mathematical models with very complicated dynamics.pdf:pdf},
+isbn = {0028-0836 (Print)$\backslash$r0028-0836 (Linking)},
+issn = {00280836},
+journal = {Nature},
+month = {jun},
+number = {5560},
+pages = {459--467},
+pmid = {176594},
+publisher = {Nature Publishing Group},
+title = {{Simple mathematical models with very complicated dynamics}},
+url = {http://www.nature.com/doifinder/10.1038/261459a0},
+volume = {261},
+year = {1976}
+}
+@article{Zwanzig1973,
+abstract = {Combining deep model-free reinforcement learning with on-line planning is a promising approach to building on the successes of deep RL. On-line planning with look-ahead trees has proven successful in environments where transition models are known a priori. However, in complex environments where transition models need to be learned from data, the deficiencies of learned models have limited their utility for planning. To address these challenges, we propose TreeQN, a differentiable, recursive, tree-structured model that serves as a drop-in replacement for any value function network in deep RL with discrete actions. TreeQN dynamically constructs a tree by recursively applying a transition model in a learned abstract state space and then aggregating predicted rewards and state-values using a tree backup to estimate Q-values. We also propose ATreeC, an actor-critic variant that augments TreeQN with a softmax layer to form a stochastic policy network. Both approaches are trained end-to-end, such that the learned model is optimised for its actual use in the tree. We show that TreeQN and ATreeC outperform n-step DQN and A2C on a box-pushing task, as well as n-step DQN and value prediction networks (Oh et al. 2017) on multiple Atari games. Furthermore, we present ablation studies that demonstrate the effect of different auxiliary losses on learning transition models.},
+archivePrefix = {arXiv},
+arxivId = {1710.11417},
+author = {Zwanzig, Robert},
+doi = {Doi 10.1039/C0jm02850a},
+eprint = {1710.11417},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Zwanzig - 1973 - Generalized Verhulst Laws for Population Growth (competition).pdf:pdf},
+isbn = {0027-8424 (Print)$\backslash$r0027-8424 (Linking)},
+issn = {0027-8424},
+journal = {Proceedings of the National Academy of Sciences of the United States of America},
+keywords = {Biological,Environment,Genetics,Models,Population Growth},
+number = {11},
+pages = {3048--51},
+pmid = {4522290},
+title = {{Generalized Verhulst laws for population growth.}},
+url = {http://www.pnas.org/content/pnas/70/11/3048.full.pdf http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=427166{\&}tool=pmcentrez{\&}rendertype=abstract},
+volume = {70},
+year = {1973}
+}
+@article{Kavanagh1934,
+abstract = {The "curve of autocatalytic growth" (and also the generalized logistic) is essentially the hyperbolic tangent. Use of this fact simplifies the theoretical and practical handling of the equation. Demonstration of a good fit of the autocatalytic curve to a given growth-curve is no proof that the growth is autocatalytic, since the autocatalytic curve can be made to fit curves of similar appearance but very different nature. The variety of forms which the autocatalytic curve can assume is evidence of the futility of such an attempted proof.},
+author = {Kavanagh, Arthur J and Richards, Oscar W},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Kavanagh, Richards - Unknown - The Autocatalytic Growth-Curve.pdf:pdf},
+journal = {The American Naturalist},
+number = {714},
+pages = {480},
+title = {{The Autocatalytic Growth-Curve}},
+url = {https://www.jstor.org/stable/pdf/2457087.pdf?refreqid=excelsior{\%}3A3ceb5b186d4a798195e315bacc581f7c http://www.jstor.org/stable/2456888{\%}5Cninternal-pdf://1934kavanagh{\_}68amernaturalist{\_}54-59-3108007681/1934Kavanagh{\_}68AmerNaturalist{\_}54-59.pdf internal-pdf://},
+volume = {68},
+year = {1934}
+}
+@article{Field1986,
+author = {Field, Richard J. and Foersterling, Horst Dieter},
+doi = {10.1021/j100412a101},
+file = {:D$\backslash$:/downloads/j100412a101.pdf:pdf},
+issn = {0022-3654},
+journal = {The Journal of Physical Chemistry},
+number = {21},
+pages = {5400--5407},
+title = {{On the oxybromine chemistry rate constants with cerium ions in the Field-Koeroes-Noyes mechanism of the Belousov-Zhabotinskii reaction: the equilibrium $\backslash$ch{\{}HBrO2 + BrO3- + H+ {\textless}=. 2BrO2 + H2O{\}}}},
+url = {http://pubs.acs.org/doi/abs/10.1021/j100412a101},
+volume = {90},
+year = {1986}
+}
+@article{Gyorgyi1992,
+abstract = {BACKGROUND: Hamilton depression rating scale (HAMD) subscales provide an economic alternative for the full scale; however, their ability to detect onset of improvement in the early course of treatment (EI) has not yet been researched. The present study investigated in patients with major depression (MD) whether the subscales are a comparable option to predict treatment remission in the early course of treatment.$\backslash$n$\backslash$nMETHODS: Based on data from 210 MD patients of a 6-week randomised, placebo-controlled trial comparing mirtazapine (MIR) and paroxetine (PAR), the discriminative and predictive validity of EI for (stable) remission at treatment end was evaluated for seven subscales and the HAMD17 in the total and in treatment subgroups (MIR vs. PAR). Receiver operating characteristics (ROC) curves (at week 2) and the Clinical Global Impression scales (CGI) (at study endpoint) were used to validate the 20{\%} EI criterion for the subscales.$\backslash$n$\backslash$nRESULTS: Only the Evans6 and Toronto7 subscale had almost the same predictive value as the HAMD17 (e.g., sensitivities stable remission Evans6/Toronto7: 96/95{\%} vs. 96{\%} HAMD17). The optimal cut-off for EI to predict remission was just below 20{\%} for most subscales and slightly over 20{\%} for stable remission.$\backslash$n$\backslash$nLIMITATIONS: Study sample representativeness, non-independence of subscales, missing external validation criterion, lack of control group.$\backslash$n$\backslash$nCONCLUSIONS: The Evans6 and Toronto7 subscales are valuable alternatives in situations, where economic aspects play a larger role. A sum score reduction of ≥20{\%} as definition for EI seems also appropriate for the HAMD subscales, in the total as well as in the antidepressant subgroups.},
+author = {Gy{\"{o}}rgyi, L{\'{a}}szl{\'{o}} and Field, Richard J.},
+doi = {10.1038/355808a0},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Gy{\"{o}}rgyi, Field - 1992 - A three-variable model of deterministic chaos in the Belousov–Zhabotinsky reaction.pdf:pdf},
+issn = {00280836},
+journal = {Nature},
+month = {feb},
+number = {6363},
+pages = {808--810},
+pmid = {25638793},
+publisher = {Nature Publishing Group},
+title = {{A three-variable model of deterministic chaos in the Belousov-Zhabotinsky reaction}},
+url = {http://www.nature.com/doifinder/10.1038/355808a0},
+volume = {355},
+year = {1992}
+}
+@book{Poincare1993,
+abstract = {Translation of: Les méthodes nouvelles de la mécanique céleste. 1. Periodic and asymptotic solutions -- 2. Approximations by series -- 3. Integral invariants and asymptotic properties of certain solutions.},
+author = {Poincaré, Henri and Goroff, Daniel L.},
+isbn = {9781563961175},
+pages = {1077},
+publisher = {American Institute of Physics},
+title = {{New methods of celestial mechanics}},
+url = {https://www.springer.com/us/book/9781563961175},
+year = {1993}
+}
 @article{Winfree1984,
 abstract = {History of the cerium / bromate oscillator and the awarding of the 1980 Lenin Prize.},
 author = {Winfree, A. T.},
