Introduction changes as of Nov 6

--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,18 +1,13 @@
 @article{May1976,
-abstract = {First-order difference equations arise in many contexts in the biological, economic and social sciences. Such equations, even though simple and deterministic, can exhibit a surprising array of dynamical behaviour, from stable points, to a bifurcating hierarchy of stable cycles, to apparently random fluctuations. There are consequently many fascinating problems, some concerned with delicate mathematical aspects of the fine structure of the trajectories, and some concerned with the practical implications and applications. This is an interpretive review of them.},
-archivePrefix = {arXiv},
-arxivId = {arXiv:1011.1669v3},
+abstract = {Simple mathematical models with very complicated dynamics},
 author = {May, Robert M.},
 doi = {10.1038/261459a0},
-eprint = {arXiv:1011.1669v3},
 file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/May - 1976 - Simple mathematical models with very complicated dynamics.pdf:pdf},
-isbn = {0028-0836 (Print)$\backslash$r0028-0836 (Linking)},
-issn = {00280836},
+issn = {0028-0836},
 journal = {Nature},
 month = {jun},
 number = {5560},
 pages = {459--467},
-pmid = {176594},
 publisher = {Nature Publishing Group},
 title = {{Simple mathematical models with very complicated dynamics}},
 url = {http://www.nature.com/doifinder/10.1038/261459a0},
@@ -26,7 +21,7 @@ arxivId = {1710.11417},
 author = {Zwanzig, Robert},
 doi = {Doi 10.1039/C0jm02850a},
 eprint = {1710.11417},
-file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Zwanzig - 1973 - Generalized Verhulst Laws for Population Growth (competition).pdf:pdf},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Zwanzig - 1973 - Generalized Verhulst laws for population growth.pdf:pdf},
 isbn = {0027-8424 (Print)$\backslash$r0027-8424 (Linking)},
 issn = {0027-8424},
 journal = {Proceedings of the National Academy of Sciences of the United States of America},
@@ -42,7 +37,7 @@ year = {1973}
 @article{Kavanagh1934,
 abstract = {The "curve of autocatalytic growth" (and also the generalized logistic) is essentially the hyperbolic tangent. Use of this fact simplifies the theoretical and practical handling of the equation. Demonstration of a good fit of the autocatalytic curve to a given growth-curve is no proof that the growth is autocatalytic, since the autocatalytic curve can be made to fit curves of similar appearance but very different nature. The variety of forms which the autocatalytic curve can assume is evidence of the futility of such an attempted proof.},
 author = {Kavanagh, Arthur J and Richards, Oscar W},
-file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Kavanagh, Richards - Unknown - The Autocatalytic Growth-Curve.pdf:pdf},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Kavanagh, Richards - 1934 - The Autocatalytic Growth-Curve.pdf:pdf},
 journal = {The American Naturalist},
 number = {714},
 pages = {480},
@@ -54,7 +49,7 @@ year = {1934}
 @article{Field1986,
 author = {Field, Richard J. and Foersterling, Horst Dieter},
 doi = {10.1021/j100412a101},
-file = {:D$\backslash$:/downloads/j100412a101.pdf:pdf},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Field, Foersterling - 1986 - On the oxybromine chemistry rate constants with cerium ions in the Field-Koeroes-Noyes mechanism of the Bel.pdf:pdf},
 issn = {0022-3654},
 journal = {The Journal of Physical Chemistry},
 number = {21},
@@ -68,7 +63,7 @@ year = {1986}
 abstract = {BACKGROUND: Hamilton depression rating scale (HAMD) subscales provide an economic alternative for the full scale; however, their ability to detect onset of improvement in the early course of treatment (EI) has not yet been researched. The present study investigated in patients with major depression (MD) whether the subscales are a comparable option to predict treatment remission in the early course of treatment.$\backslash$n$\backslash$nMETHODS: Based on data from 210 MD patients of a 6-week randomised, placebo-controlled trial comparing mirtazapine (MIR) and paroxetine (PAR), the discriminative and predictive validity of EI for (stable) remission at treatment end was evaluated for seven subscales and the HAMD17 in the total and in treatment subgroups (MIR vs. PAR). Receiver operating characteristics (ROC) curves (at week 2) and the Clinical Global Impression scales (CGI) (at study endpoint) were used to validate the 20{\%} EI criterion for the subscales.$\backslash$n$\backslash$nRESULTS: Only the Evans6 and Toronto7 subscale had almost the same predictive value as the HAMD17 (e.g., sensitivities stable remission Evans6/Toronto7: 96/95{\%} vs. 96{\%} HAMD17). The optimal cut-off for EI to predict remission was just below 20{\%} for most subscales and slightly over 20{\%} for stable remission.$\backslash$n$\backslash$nLIMITATIONS: Study sample representativeness, non-independence of subscales, missing external validation criterion, lack of control group.$\backslash$n$\backslash$nCONCLUSIONS: The Evans6 and Toronto7 subscales are valuable alternatives in situations, where economic aspects play a larger role. A sum score reduction of ≥20{\%} as definition for EI seems also appropriate for the HAMD subscales, in the total as well as in the antidepressant subgroups.},
 author = {Gy{\"{o}}rgyi, L{\'{a}}szl{\'{o}} and Field, Richard J.},
 doi = {10.1038/355808a0},
-file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Gy{\"{o}}rgyi, Field - 1992 - A three-variable model of deterministic chaos in the Belousov–Zhabotinsky reaction.pdf:pdf},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Gy{\"{o}}rgyi, Field - 1992 - A three-variable model of deterministic chaos in the Belousov-Zhabotinsky reaction.pdf:pdf},
 issn = {00280836},
 journal = {Nature},
 month = {feb},
@@ -95,7 +90,7 @@ year = {1993}
 abstract = {History of the cerium / bromate oscillator and the awarding of the 1980 Lenin Prize.},
 author = {Winfree, A. T.},
 doi = {10.1021/ed061p661},
-file = {:D$\backslash$:/downloads/ed061p661.pdf:pdf},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Winfree - 1984 - The prehistory of the Belousov-Zhabotinsky oscillator.pdf:pdf},
 isbn = {0021-9584},
 issn = {0021-9584},
 journal = {Journal of Chemical Education},
@@ -113,7 +108,7 @@ year = {1984}
 abstract = {Between the late 1960s and the beginning of the 1980s, the wide recognition that simple dynamical laws could give rise to complex behaviors was sometimes hailed as a true scientific revolution impacting several disciplines, for which a striking label was coined-"chaos." Mathematicians quickly pointed out that the purported revolution was relying on the abstract theory of dynamical systems founded in the late 19th century by Henri Poincar{\'{e}} who had already reached a similar conclusion. In this paper, we flesh out the historiographical tensions arising from these confrontations: longue-dur{\'{e}}e history and revolution; abstract mathematics and the use of mathematical techniques in various other domains. After reviewing the historiography of dynamical systems theory from Poincar{\'{e}} to the 1960s, we highlight the pioneering work of a few individuals (Steve Smale, Edward Lorenz, David Ruelle). We then go on to discuss the nature of the chaos phenomenon, which, we argue, was a conceptual reconfiguration as much as a sociodisciplinary convergence. {\textcopyright} 2002 Elsevier Science (USA).},
 author = {Aubin, David and Dalmedico, Amy Dahan},
 doi = {10.1006/hmat.2002.2351},
-file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Aubin, Dalmedico - 2002 - Writing the History of Dynamical Systems and Chaos Longue Dur{\'{e}}e and Revolution, Disciplines and Cultures.pdf:pdf},
+file = {:C$\backslash$:/Users/blaze/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/Aubin, Dalmedico - 2002 - Writing the history of dynamical systems and chaos Longue dur{\'{e}}e and revolution, disciplines and cultures.pdf:pdf},
 isbn = {0315-0860},
 issn = {03150860},
 journal = {Historia Mathematica},
@@ -152,6 +147,7 @@ year = {2007}
 }
 @article{Press1939,
 author = {Press, The M I T and Review, The},
+file = {:D$\backslash$:/downloads/1927758.pdf:pdf},
 journal = {The Review of Economics and Statistics},
 number = {2},
 pages = {75--78},
@@ -241,6 +237,7 @@ year = {2003}
 abstract = {It is shown that the discrete-time version of the neoclassical one-sector optimal growth model with elastic labor supply and standard monotonicity and convexity assumptions on technology and preferences can have periodic solutions of any period as well as chaotic solutions. The optimality of these non-monotonic solutions is traced back to strong income effects. When technology and preferences are parameterized as it is commonly done in quantitative macroeconomic studies, these phenomena cannot occur.},
 author = {Sorger, Gerhard},
 doi = {10.1007/s00199-016-1005-0},
+file = {:D$\backslash$:/downloads/Sorger2018{\_}Article{\_}CyclesAndChaosInTheOne-sectorG.pdf:pdf},
 issn = {0938-2259},
 journal = {Economic Theory},
 month = {jan},
